# KILROY

./: .gitignore  CMakeLists.txt  FIELD.md  FIELD_STATUS.md  KILROY.launch  KILROY_VERSION  README.md  RELEASE-1.0.0.md  RELEASE-1.1.0.md  STACK-INTEGRATION.md  index.html  kilroy-terminal.js  kilroy.css  queen-gnu-terminal.css  queen-styles-themes.json  queen-styles.js  releases.html
.github/workflows/: kilroy-test.yml
Documentation/kilroy/: fields-nocache.rst  grok.rst  index.rst  ioctl.rst  linux-substrate.rst  overview.rst  porting.rst
Grok/: 00_INDEX.md  01_PROJECT_OVERVIEW.md  02_FILE_MANIFEST.md  03_PHYSICS_MODEL.md  04_ABI_AND_UNITS.md  05_BUILD_AND_TEST.md  06_ACHIEVEMENTS_AND_NEXT.md  07_SESSION_LOG.md  08_CMAKE_BUILD.md  09_PERFORMANCE.md  10_SECURITY.md
arch/x86/configs/: README.md  kilroy_field_defconfig
arch/x86/entry/: Makefile  entry_64.S  rtx_field.S  syscall_64.c
arch/x86/include/asm/: rtx_field.h
boot/grok/: .gitignore  COMPAT.md  GROK.md  HELP.md  WISHES.md  grok.base.conf  grok.entries.conf  grok.entries.host.conf  version.txt
boot/grok/docs/: WINDOWS_COEXIST.md
boot/grok/memtest/: README.md
boot/grok/security/: MANIFEST
boot/grok/speedups/: MANIFEST
boot/grok/theme/: generate_wallpaper.py  generate_wallpapers.py
boot/grok/themes/dawn/: theme.conf
boot/grok/themes/field/: theme.conf
boot/grok/themes/midnight/: theme.conf
boot/grok/themes/mono/: theme.conf
cmake/: KILROYDetect.cmake  KILROYFragments.cmake  kilroy_config.h.in
compat/: LINUX_MANIFEST.md  PORT_MAP.md  README.md
config/: kilroy-field-opt.config  kilroy-identity.config  kilroy-nocache.config  kilroy-production.config
data/: field-stack-mandate.json  hostess7-comfort-package.json  kilroy-ai-mandate.json  kilroy-platform-release.json  kilroy-version.json
docs/: STACK-INTEGRATION.md  index.html  kilroy-terminal.js  kilroy-vfs.js  kilroy.css  queen-gnu-terminal.js  queen-styles.css  releases.html  spin-up.js
field/compiler/: FieldPrimer.fld  FieldStackCore.fld  FinalEye.fld  WorldRedata.fld  manifest.json
include/linux/: kilroy_field.h
include/uapi/kilroy/: rtx_field.h
include/uapi/linux/: rtx_field.h
init/: kilroy-banner.c  kilroy-uts.c  version-timestamp.c
integration/: Makefile-identity.snippet  init-Kconfig.snippet  init-Makefile.overlay  init-Makefile.snippet  init-main.snippet  init-uts-Makefile.snippet  kernel-Makefile.snippet  substrate-KILROY
kernel/rtx/: Kconfig  Makefile  kilroy_ai_field.c  kilroy_ai_field.h  kilroy_ai_wishes.h  kilroy_boot.c  kilroy_boot.h  kilroy_cache_field.c  kilroy_cache_field.h  kilroy_chardev.c  kilroy_chardev.h  kilroy_comfort_field.c  kilroy_comfort_field.h  kilroy_direct_field.c  kilroy_direct_field.h  kilroy_drm_field.c  kilroy_drm_field.h  kilroy_field_stack.c  kilroy_field_stack.h  kilroy_field_stack_proc.h  kilroy_flow.c  kilroy_flow.h  kilroy_hostess_comfort.h  kilroy_identity.c  kilroy_nexus_guard.c  kilroy_nexus_guard.h  kilroy_physics_field.c  kilroy_physics_field.h  kilroy_sdf_field.c  kilroy_sdf_field.h  kilroy_thermo_idle.c  kilroy_thermo_idle.h  kilroy_units.h  rtx_core.c  rtx_core.h  rtx_fcc.c  rtx_fcc.h  rtx_hw_field.c  rtx_hw_field.h  rtx_power.c  (+6 more)
rootfs/: README.md  build-initramfs.sh  build-production-rootfs.sh  install-team-drive.sh
rootfs/production-staging/etc/: fstab  inittab  issue  motd  os-release  passwd
rootfs/production-staging/etc/init.d/: rcS
rootfs/production-staging/tmp/: host.copy
rootfs/staging/: init
scripts/: bench-nocache-field.sh  build-kilroy-field.sh  build-kilroy.sh  check-field-stack.sh  ci-run.sh  field-recompile.sh  gen-ai-wishes.sh  gen-field-stack.sh  gen-hostess-comfort.sh  grok-boot-qemu.sh  grok-compose.sh  grok-enroll-secureboot.sh  grok-fetch-memtest.sh  grok-fetch.sh  grok-firmware-audit.sh  grok-install.sh  grok-mkimage.sh  kilroy-apply-identity.sh  kilroy-become-substrate.sh  kilroy-benchmark.sh  kilroy-compat-link.sh  kilroy-compat-path.sh  kilroy-gen-syscalls.sh  kilroy-kernel-config.sh  kilroy-pack-platform.sh  kilroy-port-complete.sh  kilroy-port-verify.sh  kilroy-release.sh  kilroy-report.sh  kilroy-stage-7.1.1.sh  kilroy-stage-compat.sh  kilroy-sync-compat.sh  kilroy-sync-delta.sh  kilroy-verify-substrate.sh  publish-kilroy-pages.sh  qemu-boot-capture.sh  qemu-boot-kilroy.sh  sync-kilroy-releases-page.sh  test-all.sh  test-boot-handoff.sh  (+13 more)
userspace/field-init/: README.md  field-init.c
userspace/field-kilroy/: FieldKilroyBridge.cpp  FieldKilroyCompat.hpp  FieldKilroyKernel.cpp  FieldKilroyKernel.hpp  FieldKilroyLayer.hpp  FieldKilroyLoader.hpp  FieldKilroySyscalls.hpp  FieldPlatform.hpp  FieldRtxFieldAbs.hpp  README.md
userspace/kilroy-ioctl-test/: kilroy-ioctl-test.c
userspace/kilroy-status/: kilroy-status.c
